Submodule bump & build update
* Update README to reflect new libjson-c requirements
* Update brushlib submodule to latest HEAD
  - now builds into itself, so update LIBPATH & rm previous files

--- a/lib/SConscript
+++ b/lib/SConscript
@@ -39,7 +39,7 @@ def build_py_module(env, *args, **kwargs):
 
 # Build against brushlib
 env.Prepend(LIBS=['mypaint-tests', "mypaint"])
-env.Append(LIBPATH="../")
+env.Append(LIBPATH="../brushlib")
 env.Append(CPPPATH=['../brushlib', '../brushlib/tests'])
 
 # Normal dependencies
