Added a generated file to .gitignore
desktop/mypaint-ora-thumbnailer is generated from
desktop/mypaint-ora-thumbnailer.py so changes to it shouldn't be done
directly.

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ TAGS
 tags
 brushlib/*-gen.h
 brushlib/mypaint-config.h
+desktop/mypaint-ora-thumbnailer
 lib/test-python-surface
 lib/_mypaintlib.so
 lib/mypaintlib.py
