Add Kaerhon Brush Pack v1
Kindly contributed as CC0 by Guillaume Loussarévian. Many thanks!

http://kaerhon.deviantart.com/art/Kaerhon-Brush-Pack-v1-for-Mypaint-1-1-378138104

--- a/brushes/order.conf
+++ b/brushes/order.conf
@@ -162,3 +162,24 @@ tanda/water-05
 tanda/water-06
 tanda/watercolor-02-paint
 tanda/watercolor-02-water
+Group: set#4
+kaerhon_v1/flat_bar_l
+kaerhon_v1/inkster_l
+kaerhon_v1/extreme_round_l
+kaerhon_v1/ink_slow_s
+kaerhon_v1/ink-slowline_s
+kaerhon_v1/smudge_ink(0.7)_sm
+kaerhon_v1/paint_radius_2_sm
+kaerhon_v1/Smear_sm
+kaerhon_v1/paint_sm
+kaerhon_v1/paint_barrr_sm
+kaerhon_v1/wet_paint_sm
+kaerhon_v1/Dirty_Transparent_sk
+kaerhon_v1/classic_sk
+kaerhon_v1/airsmudgeultimate_sk
+kaerhon_v1/Sketcher2_sk
+kaerhon_v1/airsmudge_a
+kaerhon_v1/airbruch_press_a
+kaerhon_v1/Airbrush_a
+kaerhon_v1/classicroundblock_static_c
+kaerhon_v1/fill_c
