Better handling of optimization flags for lib/
Rethink the way scons should reinstate -O0 if compiling with debug=1.
Trying to be clever with CCFLAGS was causing problems: see #52.

--- a/lib/SConscript
+++ b/lib/SConscript
@@ -64,14 +64,6 @@ env.Append(CPPPATH=numpy_path)
 
 # Python dependencies
 
-# Python is often built with optimization flags of its own,
-# which we don't want affecting our build when scons is
-# called as "CFLAGS=-O0 scons", for example.
-# See https://gna.org/bugs/?20754
-non_python_optimization_flags = {
-        flag for flag in env['CCFLAGS']
-        if flag.startswith('-O')
-    }
 
 if sys.platform == "win32":
     # official python shipped with no pc file on windows so get from current python
@@ -98,15 +90,18 @@ else:
         env.ParseConfig('python-config --ldflags')
         env.ParseConfig('python-config --cflags')
 
+
+# Renable some build flags that python-config etc. may have turned off.
+# Duplicates some stuff from ../SConstruct, but needed.
+
 # Make sure assertions are enabled
 if env.get('CPPDEFINES'):
     env['CPPDEFINES'].remove('NDEBUG')
 
-# Strip Python's optimization flags, leaving ones we want intact
-env['CCFLAGS'] = [
-        flag for flag in env['CCFLAGS']
-        if flag in non_python_optimization_flags or not flag.startswith('-O')
-    ]
+# Override Python's optimization flags if we're in HEAVY_DEBUG mode.
+if env['debug']:
+    env.Append(CCFLAGS='-O0', LINKFLAGS='-O0')
+
 
 # python extension module
 module_src = [
