Swig: use native support provided by SCons
SCons version 2.1.0+ appear to support swig just fine, and provided you're
careful about declaring inter-module dependencies the resultant project
build order is correct too.

* Use SCons's native swig support
* Move the _mypaintlib.so → brushlib dependency into lib/ where it belongs

Builds work correctly after a --clean, over many calls with --random, and
rebuild correctly following changes in source deps correctly. Versions of
scons tested: 2.1.0, 2.3.1.

MyPaint now doesn't try to call scons until after --help has been
processed, so this commit closes #54.

--- a/.gitignore
+++ b/.gitignore
@@ -14,10 +14,8 @@ brushlib/*-gen.h
 brushlib/mypaint-config.h
 desktop/mypaint-ora-thumbnailer
 lib/test-python-surface
-lib/_mypaintlib.so
 lib/mypaintlib.py
-lib/mypaintlib_wrap.cpp
-lib/mypaintlib_wrap.os
+lib/mypaintlib_wrap.cc
 mypaint
 options.cache
 *.mo
