Added lib/mypaintlib_wrap.cpp to .gitignore
Another generated file, this time from swig, apparently.

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ desktop/mypaint-ora-thumbnailer
 lib/test-python-surface
 lib/mypaintlib.py
 lib/mypaintlib_wrap.cc
+lib/mypaintlib_wrap.cpp
 mypaint
 options.cache
 *.mo
