--- a/lib/SConscript
+++ b/lib/SConscript
@@ -58,6 +58,9 @@ if sys.platform == "win32":
     from distutils import sysconfig
     pre,inc = sysconfig.get_config_vars('exec_prefix', 'INCLUDEPY')
     env.Append(CPPPATH=inc, LIBPATH=pre+'\libs', LIBS='python'+sys.version[0]+sys.version[2])
+    # scons ask export definition file during install
+    # seems always generated for VC++ but not for mingw/gcc
+    env.Append(LINKFLAGS=['-Wl,--output-def,_mypaintlib.def'])
 else:
     # some distros use python2.x-config, others python-config2.x
     try:
