--- a/lib/SConscript
+++ b/lib/SConscript
@@ -53,24 +53,38 @@ env.Append(CPPPATH=numpy_path)
 # Python dependencies
 
 
+try:
+    # As of Python 2.7.9, a python2.pc exists on both Linux
+    # and MSYS2's MinGW/i686. In the latter case, only this provides
+    # the correct flags.
+    env.ParseConfig('pkg-config --libs --cflags python2')
+except OSError:
+    # Older methods, and degenerate cases? Maybe we should get rid of these.
+    if sys.platform == "win32":
+        # official python shipped with no pc file on windows so get
+        # from current python
+        from distutils import sysconfig
+        pre,inc = sysconfig.get_config_vars('exec_prefix', 'INCLUDEPY')
+        env.Append(
+            CPPPATH=inc,
+            LIBPATH=pre+'\libs',
+            LIBS='python'+sys.version[0]+sys.version[2],
+        )
+    else:
+        # Some distros use python2.x-config, others python-config2.x
+        try:
+            env.ParseConfig(env['python_config'] + ' --cflags')
+            env.ParseConfig(env['python_config'] + ' --ldflags')
+        except OSError:
+            print ('%r does not work, trying python-config instead'
+                   % env['python_config'])
+            env.ParseConfig('python-config --ldflags')
+            env.ParseConfig('python-config --cflags')
+
 if sys.platform == "win32":
-    # official python shipped with no pc file on windows so get from current python
-    from distutils import sysconfig
-    pre,inc = sysconfig.get_config_vars('exec_prefix', 'INCLUDEPY')
-    env.Append(CPPPATH=inc, LIBPATH=pre+'\libs', LIBS='python'+sys.version[0]+sys.version[2])
     # scons ask export definition file during install
     # seems always generated for VC++ but not for mingw/gcc
     env.Append(LINKFLAGS=['-Wl,--output-def,_mypaintlib.def'])
-else:
-    # some distros use python2.x-config, others python-config2.x
-    try:
-        env.ParseConfig(env['python_config'] + ' --cflags')
-        env.ParseConfig(env['python_config'] + ' --ldflags')
-    except OSError:
-        print '%r does not work, trying python-config instead' % env['python_config']
-        env.ParseConfig('python-config --ldflags')
-        env.ParseConfig('python-config --cflags')
-
 
 # Reenable some build flags that python-config etc. may have turned off.
 # Duplicates some stuff from ../SConstruct, but needed.
