fastpng: work around GIMP gamma issues, refactor
Move fastpng stuff out into a separate compilation unit. It was getting
untidy and exposing messy crap via swig.

Lots of formatting changes.

Add a nasty workaround for GIMP's unhelpful advertising of its "sRGB built-in"
default working space as "ɣ=2.2, deal with it" when saving PNGs. Sigh.
To salvage some dignity, I've added cases for not performing any
transformations when loading PNGs, and the workaroud is now one of those.

Fixes mypaint/mypaint#129.

--- a/lib/SConscript
+++ b/lib/SConscript
@@ -108,6 +108,7 @@ module_src = [
         'eventhack.cpp',
         'gdkpixbuf2numpy.cpp',
         'pixops.cpp',
+        'fastpng.cpp',
     ]
 module = build_py_module(
     env,
