Add wrappers for GLib-style gettext
GLib defines nicer wrappers around gettext than the standard Python
gettext library in 2.7. Add a wrapper module allowing us to migrate to it
in due course.

Complete API: https://git.gnome.org/browse/glib/tree/glib/gi18n-lib.h
We probably just want C_() as the most Pythonic of these options though,
with something like the old way of doing _() to support older code.
And ngettext() of course.

Partly addresses #278.

--- a/po/SConscript
+++ b/po/SConscript
@@ -40,6 +40,7 @@ for lang in languages:
 lang = ARGUMENTS.get('translate')
 if lang:
     env.Execute('git grep --full-name --files-with-matches "^from gettext import" .. | sort > POTFILES.in')
+    env.Execute('git grep --full-name --files-with-matches "^from lib.gettext import" .. | sort >> POTFILES.in')
     env.Execute('intltool-extract --local --type=gettext/glade ../gui/resources.xml')
     for f in glob('../gui/*.glade'):
         env.Execute('intltool-extract --local --type=gettext/glade ' + f)
