String freeze ready for MyPaint 1.2.0-beta
* Uptahe po/mypaint.pot
* Update po/*.po
* Add missing comment to SConscript [NFC]

--- a/po/SConscript
+++ b/po/SConscript
@@ -114,6 +114,9 @@ if lang:
         ])
         translate = []
     else:
+        # For individual language maintainers.
+        # Update the named language only from the most recently .pot
+        # and do not update the .pot file itself.
         translate = [lang]
     for lang in translate:
         env.Execute([
