Inno Setup: add wizard image
Make the installer prettier with a big "left side" decoration image.

Not sure what do do for the icon shown during install just yet.

--- a/windows/innosetup/mypaint.iss.in
+++ b/windows/innosetup/mypaint.iss.in
@@ -10,6 +10,7 @@ AppPublisherURL=http://mypaint.org/
 DefaultDirName={pf@BITS@}\MyPaint
 DefaultGroupName=MyPaint w@BITS@
 SetupIconFile=mypaint.ico
+WizardImageFile=wizardimage.bmp
 OutputDir=..
 OutputBaseFilename=@OUTPUTBASENAME@
 AppSupportURL=https://github.com/mypaint/mypaint/issues
