--- a/windows/innosetup/mypaint.iss.in
+++ b/windows/innosetup/mypaint.iss.in
@@ -21,8 +21,9 @@ Source: "mingw@BITS@\*"; DestDir: "{app}"; Flags: ignoreversion recursesubdirs c
 
 [Icons]
 Name: "{group}\MyPaint w@BITS@"; Filename: "{app}\bin\python2w.exe"; Parameters: "bin\mypaint"; WorkingDir: "{app}"; Comment: "Simple drawing and painting program"; IconFilename: "{app}\share\mypaint\mypaint.ico"
+Name: "{group}\Development\Github"; Filename: "https://github.com/mypaint"
+Name: "{group}\Development\MyPaint w@BITS@ (console debug)"; Filename: "{app}\bin\mypaint-debug.bat"; WorkingDir: "{app}"; Comment: "Run MyPaint in debug mode and show its console output"; IconFilename: "{app}\share\mypaint\mypaint.ico"
 Name: "{group}\Website and Blog"; Filename: "http://mypaint.org"
-Name: "{group}\Github"; Filename: "https://github.com/mypaint"
 Name: "{group}\Twitter"; Filename: "http://twitter.com/MyPaintApp"
 
 [Run]
