--- a/windows/innosetup/mypaint.iss.in
+++ b/windows/innosetup/mypaint.iss.in
@@ -22,6 +22,9 @@ ChangesAssociations=yes
 [Tasks]
 Name: associateora; Description: "&Associate OpenRaster (*.ora) files with MyPaint w@BITS@"
 Name: associateora\defopen; Description: "Make MyPaint w@BITS@ their default ""Open"" action"
+Name: desktopicon; Description: "Create a &desktop icon"
+Name: desktopicon\common; Description: "For all users"; Flags: exclusive
+Name: desktopicon\user; Description: "For the current user only"; Flags: exclusive unchecked
 
 [Registry]
 Root: HKCR; Subkey: ".ora"; ValueType: string; ValueName: ""; ValueData: "OpenRasterFile"; Flags: uninsdeletevalue; Tasks: associateora
@@ -46,6 +49,8 @@ Name: "{group}\MyPaint Website and Blog"; Filename: "http://mypaint.org"
 Name: "{group}\MyPaint User Manual"; Filename: "https://github.com/mypaint/mypaint/wiki/v1.2-User-Manual"
 Name: "{group}\Get Updates for MyPaint"; Filename: "https://github.com/mypaint/mypaint/releases"
 Name: "{group}\Follow MyPaint on Twitter"; Filename: "http://twitter.com/MyPaintApp"
+Name: "{commondesktop}\MyPaint w@BITS@"; Filename: "{app}\bin\python2w.exe"; Parameters: "bin\mypaint"; WorkingDir: "{app}"; Comment: "Simple drawing and painting program"; IconFilename: "{app}\share\mypaint\mypaint.ico"; Tasks: desktopicon\common
+Name: "{userdesktop}\MyPaint w@BITS@"; Filename: "{app}\bin\python2w.exe"; Parameters: "bin\mypaint"; WorkingDir: "{app}"; Comment: "Simple drawing and painting program"; IconFilename: "{app}\share\mypaint\mypaint.ico"; Tasks: desktopicon\user
 
 [Run]
 Filename: "{app}\bin\mypaint-postinst.cmd"; Flags: shellexec runascurrentuser runhidden
