Travis: translate tests require intltool

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ addons:
     packages:
       - g++
       - gettext
+      - intltool
       - gir1.2-gtk-3.0
       - libgtk-3-dev
       - libjson0-dev
