--- a/lib/SConscript
+++ b/lib/SConscript
@@ -20,9 +20,15 @@ def build_py_module(env, *args, **kwargs):
 
 
 # Build against brushlib
-env.Prepend(LIBS=['mypaint-tests', "mypaint"])
+if env['use_sharedlib']:
+    env.Prepend(LIBS=["mypaint"])
+else:
+    env.Prepend(LIBS=['mypaint-tests', "mypaint"])
 env.Append(LIBPATH="../brushlib")
-env.Append(CPPPATH=['../brushlib', '../brushlib/tests'])
+if env['use_sharedlib']:
+    env.Append(CPPPATH=['../brushlib'])
+else:
+    env.Append(CPPPATH=['../brushlib', '../brushlib/tests'])
 
 
 def parse_pkg_config(env, libname):
@@ -199,10 +205,17 @@ if 'NDEBUG' in env.get('CPPDEFINES', []):
 if env['debug']:
     env.Append(CCFLAGS='-O0', LINKFLAGS='-O0')
 
+#If we're building against the shared lib, omit test code
+if env['use_sharedlib']:
+    env.Append(CCFLAGS='-DNO_TESTS')
 
 # python extension module
-
 env.Append(SWIGFLAGS="-Wall -noproxydel -python -c++")
+
+#If we're building against the shared lib, omit test code
+if env['use_sharedlib']:
+    env.Append(SWIGFLAGS='-DNO_TESTS')
+
 #env.Append(SWIGCXXFILESUFFIX="_wrap.cpp") #No: SCons 2.3.1 removes ".ext" (!)
 module_src = [
         'mypaintlib.i',
