Travis: explicit use_sharedlib=false
Explicitly build for testing with use_sharedlib=false. This is the default
behaviour currently, but explicit is better then implicit.

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,6 @@ addons:
       - git
 
 script:
-    - scons
+    - scons use_sharedlib=false
     - nosetests --with-doctest lib brushlib
     - tests/run_all_basic_tests.sh
