--- a/lib/SConscript
+++ b/lib/SConscript
@@ -1,4 +1,4 @@
-Import('env', 'brushlib')
+Import('env')
 import sys, os
 import subprocess
 
@@ -18,16 +18,10 @@ def build_py_module(env, *args, **kwargs):
         pass
     return env.SharedLibrary(*args, **kwargs)
 
-
-# Build against brushlib
-if env['use_sharedlib']:
-    env.Prepend(LIBS=["mypaint"])
-    env.Append(LIBPATH="../brushlib")
-    env.Append(CPPPATH=['../brushlib'])
-else:
-    env.Prepend(LIBS=['mypaint-tests', "mypaint"])
-    env.Append(LIBPATH=["../brushlib", "../brushlib/tests"])
-    env.Append(CPPPATH=['../brushlib', '../brushlib/tests'])
+# FIXME: reinstate these once use_sharedlib ripout is done?
+#env.Prepend(LIBS=['mypaint-tests', "mypaint"])
+#env.Append(LIBPATH=["../brushlib", "../brushlib/tests"])
+#env.Append(CPPPATH=['../brushlib', '../brushlib/tests'])
 
 
 def parse_pkg_config(env, libname):
@@ -85,6 +79,7 @@ def fixup_abspath(path):
         return path
 
 # Normal dependencies
+parse_pkg_config(env, "libmypaint")
 parse_pkg_config(env, "glib-2.0")
 parse_pkg_config(env, "libpng")
 parse_pkg_config(env, "lcms2")
@@ -204,16 +199,14 @@ if 'NDEBUG' in env.get('CPPDEFINES', []):
 if env['debug']:
     env.Append(CCFLAGS='-O0', LINKFLAGS='-O0')
 
-#If we're building against the shared lib, omit test code
-if env['use_sharedlib']:
-    env.Append(CCFLAGS='-DNO_TESTS')
+#FIXME: since we're building against the shared lib, omit test code
+env.Append(CCFLAGS='-DNO_TESTS')
 
 # python extension module
 env.Append(SWIGFLAGS="-Wall -noproxydel -python -c++")
 
-#If we're building against the shared lib, omit test code
-if env['use_sharedlib']:
-    env.Append(SWIGFLAGS='-DNO_TESTS')
+#FIXME: since we're building against the shared lib, omit test code
+env.Append(SWIGFLAGS='-DNO_TESTS')
 
 #env.Append(SWIGCXXFILESUFFIX="_wrap.cpp") #No: SCons 2.3.1 removes ".ext" (!)
 module_src = [
@@ -230,9 +223,6 @@ module = build_py_module(
     source=module_src,
     SHLIBPREFIX="",
     )
-env.Requires("mypaintlib_wrap.cc", brushlib)  # establish order
-env.Requires(module, brushlib)  # just to be certain
-env.Depends(module, brushlib)   # not sufficient by itself
 
 Return('module')
 
