Add Python interface to libmypaint brush settings & inputs
MyPaint needs to be able to present a brush edit interface, so add a
grotty little wrapper interface to pull that stuff out in a useful form.

--- a/lib/SConscript
+++ b/lib/SConscript
@@ -216,6 +216,7 @@ module_src = [
         'gdkpixbuf2numpy.cpp',
         'pixops.cpp',
         'fastpng.cpp',
+        'brushsettings.cpp',
     ]
 module = build_py_module(
     env,
