--- a/lib/SConscript
+++ b/lib/SConscript
@@ -109,7 +109,7 @@ if env.get("numpy_include"):
 # syntax too much, causing os.path.join() to fail.
 
 if not numpy_path:
-    numpy_cfg_py = "import numpy; print numpy.get_include()"
+    numpy_cfg_py = "import numpy as np; print np.get_include()"
     try:
         numpy_path = subprocess.check_output([
             env["python_binary"],
@@ -128,8 +128,8 @@ if not numpy_path:
 
 if not numpy_path:
     try:
-        import numpy
-        numpy_path = numpy.get_include()
+        import numpy as np
+        numpy_path = np.get_include()
     except:
         numpy_path = None
 
